premiere version de la page contact

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li class="nav-item"><a class="nav-link" href="#zones">Zones</a></li>
                     <li class="nav-item"><a class="nav-link" href="#devis">Devis</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                <button id="darkToggle" class="btn btn-outline-secondary ms-3">🌙</button>
                 </ul> <a href="#devis" class="btn btn-cta ms-3">Demander un devis gratuit</a>
             </div>
         </div>
