--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,16 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact & Devis - R.W Agency</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="contact.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Poppins:wght@400;500&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="contact.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 
 <body>
@@ -24,8 +27,10 @@
           <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html#about">À propos</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html#zones">Zones</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <button id="darkToggle" class="btn btn-outline-secondary ms-3">🌙</button>
+          <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+          <li class="nav-item">
+            <button id="darkToggle" class="btn btn-outline-secondary ms-3">🌙</button>
+          </li>
         </ul>
         <a href="#devis" class="btn btn-cta ms-3">Demander un devis</a>
       </div>
@@ -33,7 +38,8 @@
   </nav>
 
   <section id="hero-contact">
-    <div class="container text-center">
+    <div class="overlay"></div>
+    <div class="container text-center hero-text">
       <h1>Contact & Devis</h1>
       <p class="subtitle">Parlons de votre projet de nettoyage de fin de chantier.</p>
     </div>
@@ -48,67 +54,76 @@
       <form id="contactForm" class="mt-4">
         <div class="mb-3">
           <label for="name" class="form-label">Nom complet *</label>
-          <input type="text" class="form-control" id="name" required>
+          <input type="text" class="form-control" id="name" name="name" required />
         </div>
+
         <div class="mb-3">
           <label for="email" class="form-label">Adresse e-mail *</label>
-          <input type="email" class="form-control" id="email" required>
+          <input type="email" class="form-control" id="email" name="email" required />
         </div>
+
+        <div class="mb-3">
+          <label for="title" class="form-label">Objet</label>
+          <input type="text" class="form-control" id="sujet" name="sujet" placeholder="Demande d'information" />
+        </div>
+
         <div class="mb-3">
           <label for="message" class="form-label">Message *</label>
-          <textarea class="form-control" id="message" rows="5" required></textarea>
+          <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
         </div>
-        <button type="submit" class="btn btn-cta">Envoyer le message</button>
+
+        <button type="submit" class="btn btn-cta" onclick="sendMail()">Envoyer le message</button>
       </form>
-    </div>
 
-    <div id="devis" class="box devis-form mt-5">
-      <h3>🧾 Demande de devis gratuit</h3>
-      <div class="small-divider"></div>
-      <p>Remplissez les champs ci-dessous, nous vous enverrons un devis personnalisé dans la journée.</p>
 
-      <form id="quoteForm" class="mt-4">
-        <div class="row g-3">
-          <div class="col-md-6">
-            <label for="nom" class="form-label">Nom / Société *</label>
-            <input type="text" class="form-control" id="nom" required>
-          </div>
-          <div class="col-md-6">
-            <label for="tel" class="form-label">Téléphone *</label>
-            <input type="tel" class="form-control" id="tel" required>
-          </div>
-          <div class="col-md-6">
-            <label for="emailDevis" class="form-label">E-mail *</label>
-            <input type="email" class="form-control" id="emailDevis" required>
-          </div>
-          <div class="col-md-6">
-            <label for="ville" class="form-label">Ville / Zone *</label>
-            <input type="text" class="form-control" id="ville" required>
-          </div>
-          <div class="col-md-6">
-            <label for="surface" class="form-label">Surface (m²)</label>
-            <input type="number" class="form-control" id="surface">
-          </div>
-          <div class="col-md-6">
-            <label for="delai" class="form-label">Délai souhaité</label>
-            <input type="text" class="form-control" id="delai">
-          </div>
-          <div class="col-12">
-            <label for="details" class="form-label">Détails du chantier</label>
-            <textarea class="form-control" id="details" rows="4"></textarea>
-          </div>
-        </div>
-        <button type="submit" class="btn btn-cta mt-4">Envoyer ma demande</button>
-      </form>
-    </div>
 
-    <footer class="site-footer mt-5">
-      Mentions légales — Copyright © 2025 R.W Agency
-    </footer>
+      <div id="devis" class="box devis-form mt-5">
+        <h3>🧾 Demande de devis gratuit</h3>
+        <div class="small-divider"></div>
+        <p>Remplissez les champs ci-dessous, nous vous enverrons un devis personnalisé dans la journée.</p>
+
+        <form id="quoteForm" class="mt-4">
+          <div class="row g-3">
+            <div class="col-md-6">
+              <label for="nom" class="form-label">Nom / Société *</label>
+              <input type="text" class="form-control" id="nom" name="name" required />
+            </div>
+            <div class="col-md-6">
+              <label for="tel" class="form-label">Téléphone *</label>
+              <input type="tel" class="form-control" id="tel" name="phone" required />
+            </div>
+            <div class="col-md-6">
+              <label for="emailDevis" class="form-label">E-mail *</label>
+              <input type="email" class="form-control" id="emailDevis" name="email" required />
+            </div>
+            <div class="col-md-6">
+              <label for="ville" class="form-label">Ville / Zone *</label>
+              <input type="text" class="form-control" id="ville" name="ville" required />
+            </div>
+            <div class="col-md-6">
+              <label for="surface" class="form-label">Surface (m²)</label>
+              <input type="number" class="form-control" id="surface" name="surface" />
+            </div>
+            <div class="col-md-6">
+              <label for="delai" class="form-label">Délai souhaité</label>
+              <input type="text" class="form-control" id="delai" name="delai" />
+            </div>
+            <div class="col-12">
+              <label for="details" class="form-label">Détails du chantier</label>
+              <textarea class="form-control" id="details" name="details" rows="4"></textarea>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-cta mt-4">Envoyer ma demande</button>
+        </form>
+      </div>
+
+      <footer class="site-footer mt-5">
+        Mentions légales — Copyright © 2025 R.W Agency
+      </footer>
   </main>
 
-  <script src="script.js"></script>
   <script src="contact.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
