--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
                     <li class="nav-item"><a class="nav-link" href="#about">À propos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#zones">Zones</a></li>
                     <li class="nav-item"><a class="nav-link" href="#devis">Devis</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                <button id="darkToggle" class="btn btn-outline-secondary ms-3">🌙</button>
-                </ul> <a href="#devis" class="btn btn-cta ms-3">Demander un devis gratuit</a>
+                    <button id="darkToggle" class="btn btn-outline-secondary ms-3">🌙</button>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=R.wagency@hotmail.com&su=Demande%20de%20devis&body=Bonjour%20R.W%20Agency,%0AJe%20souhaite%20obtenir%20un%20devis%20pour%20vos%20services.%0A%0ANom%20:%0AEntreprise%20:%0AVille%20:%0ASurface%20:%0ADétails%20du%20chantier%20:%0A%0AMerci%20!"
+                        target="_blank" class="btn btn-cta ms-3">
+                        Demander un devis
+                    </a>
             </div>
         </div>
     </nav>
@@ -94,8 +96,11 @@
             <h3>Demandez votre devis gratuit</h3>
             <div class="small-divider"></div>
             <p>Un chantier terminé mérite une finition parfaite. Contactez-nous dès aujourd’hui pour recevoir votre
-                devis personnalisé sous 24h.</p> <a href="contact.html" class="btn btn-cta">Recevoir mon devis
-                maintenant</a>
+                devis personnalisé sous 24h.</p> <a
+                href="https://mail.google.com/mail/?view=cm&fs=1&to=R.wagency@hotmail.com&su=Demande%20de%20devis&body=Bonjour%20R.W%20Agency,%0AJe%20souhaite%20obtenir%20un%20devis%20pour%20vos%20services.%0A%0ANom%20:%0AEntreprise%20:%0AVille%20:%0ASurface%20:%0ADétails%20du%20chantier%20:%0A%0AMerci%20!"
+                target="_blank" class="btn btn-cta ms-3">
+                Demander un devis
+            </a>
         </div>
         <div id="contact" class="contact">
             <h3>Contactez-nous</h3>
@@ -103,12 +108,20 @@
             <p>Parlez-nous de votre chantier : surface, nature des travaux, délais souhaités.</p>
             <p><strong>R.W Agency</strong></p>
             <p>📍 Basée à Lyon</p>
-            <p>📧 <a href="mailto:r.wagency@hotmail.com">r.wagency@hotmail.com</a></p>
+            <p>📧 <a
+                    href="https://mail.google.com/mail/?view=cm&fs=1&to=R.wagency@hotmail.com&su=Contact%20-%20R.W%20Agency&body=Bonjour%20R.W%20Agency,%0AJe%20souhaite%20entrer%20en%20contact%20avec%20votre%20équipe.%0A%0ANom%20:%0AEntreprise%20:%0AVille%20:%0AMessage%20:%0A%0AMerci%20!">
+                    r.wagency@hotmail.com</a></p>
             <p>📱 07 82 46 87 56</p>
-            <p>🕐 Interventions 7j/7 sur devis</p> <a href="contact.html"
-                class="btn btn-outline-primary mt-2">Nous écrire</a>
+            <p>🕐 Interventions 7j/7 sur devis</p> <a
+                href="https://mail.google.com/mail/?view=cm&fs=1&to=R.wagency@hotmail.com&su=Contact%20-%20R.W%20Agency&body=Bonjour%20R.W%20Agency,%0AJe%20souhaite%20entrer%20en%20contact%20avec%20votre%20équipe.%0A%0ANom%20:%0AEntreprise%20:%0AVille%20:%0AMessage%20:%0A%0AMerci%20!"
+                target="_blank" class="btn btn-cta ms-3">
+                Nous écrire
+            </a>
+
         </div>
-        <footer class="site-footer"> Mentions légales — Copyright © 2025 R.W Agency </footer>
+        <footer class="site-footer mt-5">
+            <a href="mentions-legales.html">Mentions légales</a> — Copyright © 2025 R.W Agency
+        </footer>
     </main>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
